# libiotctrl

./: .girignore  .gitignore  CMakeLists.txt  Makefile  README.md  compile_commands.json  rc.c  rc.cpp  rc.out  rc.py  relay.c  temp-sensor.c
cmake/: compiler-flags.cmake
src/: relay.c
src/bindings/node/: binding.gyp  package-lock.json  temp_sensor.js  temp_sensor.node  temp_sensor_node.c
src/bindings/python/: iotctrl.py  temp-sensor-tool.py
src/iotctrl/: 7segment-display.c  7segment-display.h  CMakeLists.txt  beep.c  beep.h  buzzer.c  buzzer.h  dht31.c  dht31.h  relay.c  relay.h  temp-sensor.c  temp-sensor.h
src/tools/: 7seg-disp-tool.c  CMakeLists.txt  buzzer-tool.c  relay-tool.c  temp-sensor-tool.c
tools/: CMakeLists.txt  beeper.c  buzzer-tool.c  relay-tool.c  temp-sensor-tool.c
